cmake_minimum_required(VERSION 3.5)
project(mavros_msgs)
set(CMAKE_VERBOSE_MAKEFILE ON)
# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()
## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  message_generation
  geographic_msgs
  geometry_msgs
  std_msgs
)
## System dependencies are found with CMake''s conventions
################################################
## Declare ROS messages, services and actions ##
################################################
add_message_files(
    FILES
    ADSBVehicle.msg
    ActuatorControl.msg
    Altitude.msg
    AttitudeTarget.msg
    BatteryStatus.msg
    CamIMUStamp.msg
    CommandCode.msg
    CompanionProcessStatus.msg
    DebugValue.msg
    ESCInfo.msg
    ESCInfoItem.msg
    ESCStatus.msg
    ESCStatusItem.msg
    EstimatorStatus.msg
    ExtendedState.msg
    FileEntry.msg
    GPSRAW.msg
    GPSRTK.msg
    GlobalPositionTarget.msg
    HilActuatorControls.msg
    HilControls.msg
    HilGPS.msg
    HilSensor.msg
    HilStateQuaternion.msg
    HomePosition.msg
    LandingTarget.msg
    LogData.msg
    LogEntry.msg
    ManualControl.msg
    Mavlink.msg
    MountControl.msg
    OnboardComputerStatus.msg
    OpticalFlowRad.msg
    OverrideRCIn.msg
    Param.msg
    ParamValue.msg
    PlayTuneV2.msg
    PositionTarget.msg
    RCIn.msg
    RCOut.msg
    RTCM.msg
    RTKBaseline.msg
    RadioStatus.msg
    State.msg
    StatusText.msg
    Thrust.msg
    TimesyncStatus.msg
    Trajectory.msg
    VFR_HUD.msg
    VehicleInfo.msg
    Vibration.msg
    Waypoint.msg
    WaypointList.msg
    WaypointReached.msg
    WheelOdomStamped.msg
)
add_service_files(
    FILES
    CommandBool.srv
    CommandHome.srv
    CommandInt.srv
    CommandLong.srv
    CommandTOL.srv
    CommandTriggerControl.srv
    CommandTriggerInterval.srv
    CommandVtolTransition.srv
    FileChecksum.srv
    FileClose.srv
    FileList.srv
    FileMakeDir.srv
    FileOpen.srv
    FileRead.srv
    FileRemove.srv
    FileRemoveDir.srv
    FileRename.srv
    FileTruncate.srv
    FileWrite.srv
    LogRequestData.srv
    LogRequestEnd.srv
    LogRequestList.srv
    MessageInterval.srv
    MountConfigure.srv
    ParamGet.srv
    ParamPull.srv
    ParamPush.srv
    ParamSet.srv
    SetMavFrame.srv
    SetMode.srv
    StreamRate.srv
    VehicleInfoGet.srv
    WaypointClear.srv
    WaypointPull.srv
    WaypointPush.srv
    WaypointSetCurrent.srv
)
find_package( geographic_msgs REQUIRED)
find_package( geometry_msgs REQUIRED)
find_package( roscpp REQUIRED)
find_package( std_msgs REQUIRED)
## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
  geographic_msgs
  geometry_msgs
  std_msgs
)
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if you package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
  CATKIN_DEPENDS
  "message_runtime"
  "geographic_msgs"
  "geometry_msgs"
  "roscpp"
  "std_msgs"
)
###########
## Build ##
###########
## Specify additional locations of header files
## Your package locations should be listed before other locations
# include_directories(include)
include_directories(
  include
  ${PROJECT_SOURCE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${catkin_INCLUDE_DIRS}
 "/usr/local/MATLAB/R2020b/extern/include"
 "/usr/local/MATLAB/R2020b/extern/include/MatlabDataArray"
 "/usr/local/MATLAB/R2020b/toolbox/ros/include/ros1"
 "/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/include"
 "/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/console_bridge/include"
 "/usr/local/MATLAB/R2020b/toolbox/ros/mlroscpp/custom_messages/include"
 "/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/boost/include"
  "include/mavros_msgs"
)
set (CMAKE_SKIP_BUILD_RPATH false)
set (CMAKE_BUILD_WITH_INSTALL_RPATH true)
set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
## Get list of .c files in project source directory
file(GLOB ${PROJECT_NAME}_C_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/*.c)
## Get list of .cpp files in project source directory
file(GLOB ${PROJECT_NAME}_CPP_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/*.cpp)
link_directories("/usr/local/MATLAB/R2020b/extern/bin/glnxa64")
link_directories("/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/console_bridge/lib")
link_directories("/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib")
link_directories("/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/boost/lib")
# Declare library
add_library(
    mavros_msgs_matlab 
    SHARED
    src/mavros_msgs_ADSBVehicle_common.cpp
    src/mavros_msgs_msg_ADSBVehicle_publisher.cpp
    src/mavros_msgs_msg_ADSBVehicle_subscriber.cpp
    src/mavros_msgs_ActuatorControl_common.cpp
    src/mavros_msgs_msg_ActuatorControl_publisher.cpp
    src/mavros_msgs_msg_ActuatorControl_subscriber.cpp
    src/mavros_msgs_Altitude_common.cpp
    src/mavros_msgs_msg_Altitude_publisher.cpp
    src/mavros_msgs_msg_Altitude_subscriber.cpp
    src/mavros_msgs_AttitudeTarget_common.cpp
    src/mavros_msgs_msg_AttitudeTarget_publisher.cpp
    src/mavros_msgs_msg_AttitudeTarget_subscriber.cpp
    src/mavros_msgs_BatteryStatus_common.cpp
    src/mavros_msgs_msg_BatteryStatus_publisher.cpp
    src/mavros_msgs_msg_BatteryStatus_subscriber.cpp
    src/mavros_msgs_CamIMUStamp_common.cpp
    src/mavros_msgs_msg_CamIMUStamp_publisher.cpp
    src/mavros_msgs_msg_CamIMUStamp_subscriber.cpp
    src/mavros_msgs_CommandCode_common.cpp
    src/mavros_msgs_msg_CommandCode_publisher.cpp
    src/mavros_msgs_msg_CommandCode_subscriber.cpp
    src/mavros_msgs_CompanionProcessStatus_common.cpp
    src/mavros_msgs_msg_CompanionProcessStatus_publisher.cpp
    src/mavros_msgs_msg_CompanionProcessStatus_subscriber.cpp
    src/mavros_msgs_DebugValue_common.cpp
    src/mavros_msgs_msg_DebugValue_publisher.cpp
    src/mavros_msgs_msg_DebugValue_subscriber.cpp
    src/mavros_msgs_ESCInfo_common.cpp
    src/mavros_msgs_msg_ESCInfo_publisher.cpp
    src/mavros_msgs_msg_ESCInfo_subscriber.cpp
    src/mavros_msgs_ESCInfoItem_common.cpp
    src/mavros_msgs_msg_ESCInfoItem_publisher.cpp
    src/mavros_msgs_msg_ESCInfoItem_subscriber.cpp
    src/mavros_msgs_ESCStatus_common.cpp
    src/mavros_msgs_msg_ESCStatus_publisher.cpp
    src/mavros_msgs_msg_ESCStatus_subscriber.cpp
    src/mavros_msgs_ESCStatusItem_common.cpp
    src/mavros_msgs_msg_ESCStatusItem_publisher.cpp
    src/mavros_msgs_msg_ESCStatusItem_subscriber.cpp
    src/mavros_msgs_EstimatorStatus_common.cpp
    src/mavros_msgs_msg_EstimatorStatus_publisher.cpp
    src/mavros_msgs_msg_EstimatorStatus_subscriber.cpp
    src/mavros_msgs_ExtendedState_common.cpp
    src/mavros_msgs_msg_ExtendedState_publisher.cpp
    src/mavros_msgs_msg_ExtendedState_subscriber.cpp
    src/mavros_msgs_FileEntry_common.cpp
    src/mavros_msgs_msg_FileEntry_publisher.cpp
    src/mavros_msgs_msg_FileEntry_subscriber.cpp
    src/mavros_msgs_GPSRAW_common.cpp
    src/mavros_msgs_msg_GPSRAW_publisher.cpp
    src/mavros_msgs_msg_GPSRAW_subscriber.cpp
    src/mavros_msgs_GPSRTK_common.cpp
    src/mavros_msgs_msg_GPSRTK_publisher.cpp
    src/mavros_msgs_msg_GPSRTK_subscriber.cpp
    src/mavros_msgs_GlobalPositionTarget_common.cpp
    src/mavros_msgs_msg_GlobalPositionTarget_publisher.cpp
    src/mavros_msgs_msg_GlobalPositionTarget_subscriber.cpp
    src/mavros_msgs_HilActuatorControls_common.cpp
    src/mavros_msgs_msg_HilActuatorControls_publisher.cpp
    src/mavros_msgs_msg_HilActuatorControls_subscriber.cpp
    src/mavros_msgs_HilControls_common.cpp
    src/mavros_msgs_msg_HilControls_publisher.cpp
    src/mavros_msgs_msg_HilControls_subscriber.cpp
    src/mavros_msgs_HilGPS_common.cpp
    src/mavros_msgs_msg_HilGPS_publisher.cpp
    src/mavros_msgs_msg_HilGPS_subscriber.cpp
    src/mavros_msgs_HilSensor_common.cpp
    src/mavros_msgs_msg_HilSensor_publisher.cpp
    src/mavros_msgs_msg_HilSensor_subscriber.cpp
    src/mavros_msgs_HilStateQuaternion_common.cpp
    src/mavros_msgs_msg_HilStateQuaternion_publisher.cpp
    src/mavros_msgs_msg_HilStateQuaternion_subscriber.cpp
    src/mavros_msgs_HomePosition_common.cpp
    src/mavros_msgs_msg_HomePosition_publisher.cpp
    src/mavros_msgs_msg_HomePosition_subscriber.cpp
    src/mavros_msgs_LandingTarget_common.cpp
    src/mavros_msgs_msg_LandingTarget_publisher.cpp
    src/mavros_msgs_msg_LandingTarget_subscriber.cpp
    src/mavros_msgs_LogData_common.cpp
    src/mavros_msgs_msg_LogData_publisher.cpp
    src/mavros_msgs_msg_LogData_subscriber.cpp
    src/mavros_msgs_LogEntry_common.cpp
    src/mavros_msgs_msg_LogEntry_publisher.cpp
    src/mavros_msgs_msg_LogEntry_subscriber.cpp
    src/mavros_msgs_ManualControl_common.cpp
    src/mavros_msgs_msg_ManualControl_publisher.cpp
    src/mavros_msgs_msg_ManualControl_subscriber.cpp
    src/mavros_msgs_Mavlink_common.cpp
    src/mavros_msgs_msg_Mavlink_publisher.cpp
    src/mavros_msgs_msg_Mavlink_subscriber.cpp
    src/mavros_msgs_MountControl_common.cpp
    src/mavros_msgs_msg_MountControl_publisher.cpp
    src/mavros_msgs_msg_MountControl_subscriber.cpp
    src/mavros_msgs_OnboardComputerStatus_common.cpp
    src/mavros_msgs_msg_OnboardComputerStatus_publisher.cpp
    src/mavros_msgs_msg_OnboardComputerStatus_subscriber.cpp
    src/mavros_msgs_OpticalFlowRad_common.cpp
    src/mavros_msgs_msg_OpticalFlowRad_publisher.cpp
    src/mavros_msgs_msg_OpticalFlowRad_subscriber.cpp
    src/mavros_msgs_OverrideRCIn_common.cpp
    src/mavros_msgs_msg_OverrideRCIn_publisher.cpp
    src/mavros_msgs_msg_OverrideRCIn_subscriber.cpp
    src/mavros_msgs_Param_common.cpp
    src/mavros_msgs_msg_Param_publisher.cpp
    src/mavros_msgs_msg_Param_subscriber.cpp
    src/mavros_msgs_ParamValue_common.cpp
    src/mavros_msgs_msg_ParamValue_publisher.cpp
    src/mavros_msgs_msg_ParamValue_subscriber.cpp
    src/mavros_msgs_PlayTuneV2_common.cpp
    src/mavros_msgs_msg_PlayTuneV2_publisher.cpp
    src/mavros_msgs_msg_PlayTuneV2_subscriber.cpp
    src/mavros_msgs_PositionTarget_common.cpp
    src/mavros_msgs_msg_PositionTarget_publisher.cpp
    src/mavros_msgs_msg_PositionTarget_subscriber.cpp
    src/mavros_msgs_RCIn_common.cpp
    src/mavros_msgs_msg_RCIn_publisher.cpp
    src/mavros_msgs_msg_RCIn_subscriber.cpp
    src/mavros_msgs_RCOut_common.cpp
    src/mavros_msgs_msg_RCOut_publisher.cpp
    src/mavros_msgs_msg_RCOut_subscriber.cpp
    src/mavros_msgs_RTCM_common.cpp
    src/mavros_msgs_msg_RTCM_publisher.cpp
    src/mavros_msgs_msg_RTCM_subscriber.cpp
    src/mavros_msgs_RTKBaseline_common.cpp
    src/mavros_msgs_msg_RTKBaseline_publisher.cpp
    src/mavros_msgs_msg_RTKBaseline_subscriber.cpp
    src/mavros_msgs_RadioStatus_common.cpp
    src/mavros_msgs_msg_RadioStatus_publisher.cpp
    src/mavros_msgs_msg_RadioStatus_subscriber.cpp
    src/mavros_msgs_State_common.cpp
    src/mavros_msgs_msg_State_publisher.cpp
    src/mavros_msgs_msg_State_subscriber.cpp
    src/mavros_msgs_StatusText_common.cpp
    src/mavros_msgs_msg_StatusText_publisher.cpp
    src/mavros_msgs_msg_StatusText_subscriber.cpp
    src/mavros_msgs_Thrust_common.cpp
    src/mavros_msgs_msg_Thrust_publisher.cpp
    src/mavros_msgs_msg_Thrust_subscriber.cpp
    src/mavros_msgs_TimesyncStatus_common.cpp
    src/mavros_msgs_msg_TimesyncStatus_publisher.cpp
    src/mavros_msgs_msg_TimesyncStatus_subscriber.cpp
    src/mavros_msgs_Trajectory_common.cpp
    src/mavros_msgs_msg_Trajectory_publisher.cpp
    src/mavros_msgs_msg_Trajectory_subscriber.cpp
    src/mavros_msgs_VFR_HUD_common.cpp
    src/mavros_msgs_msg_VFR_HUD_publisher.cpp
    src/mavros_msgs_msg_VFR_HUD_subscriber.cpp
    src/mavros_msgs_VehicleInfo_common.cpp
    src/mavros_msgs_msg_VehicleInfo_publisher.cpp
    src/mavros_msgs_msg_VehicleInfo_subscriber.cpp
    src/mavros_msgs_Vibration_common.cpp
    src/mavros_msgs_msg_Vibration_publisher.cpp
    src/mavros_msgs_msg_Vibration_subscriber.cpp
    src/mavros_msgs_Waypoint_common.cpp
    src/mavros_msgs_msg_Waypoint_publisher.cpp
    src/mavros_msgs_msg_Waypoint_subscriber.cpp
    src/mavros_msgs_WaypointList_common.cpp
    src/mavros_msgs_msg_WaypointList_publisher.cpp
    src/mavros_msgs_msg_WaypointList_subscriber.cpp
    src/mavros_msgs_WaypointReached_common.cpp
    src/mavros_msgs_msg_WaypointReached_publisher.cpp
    src/mavros_msgs_msg_WaypointReached_subscriber.cpp
    src/mavros_msgs_WheelOdomStamped_common.cpp
    src/mavros_msgs_msg_WheelOdomStamped_publisher.cpp
    src/mavros_msgs_msg_WheelOdomStamped_subscriber.cpp
    src/mavros_msgs_CommandBool_request_common.cpp
    src/mavros_msgs_CommandBool_response_common.cpp
    src/mavros_msgs_srv_CommandBool_client.cpp
    src/mavros_msgs_srv_CommandBool_server.cpp
    src/mavros_msgs_msg_CommandBoolRequest_publisher.cpp
    src/mavros_msgs_msg_CommandBoolRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandBoolResponse_publisher.cpp
    src/mavros_msgs_msg_CommandBoolResponse_subscriber.cpp
    src/mavros_msgs_CommandBoolRequest_common.cpp
    src/mavros_msgs_CommandBoolResponse_common.cpp
    src/mavros_msgs_CommandHome_request_common.cpp
    src/mavros_msgs_CommandHome_response_common.cpp
    src/mavros_msgs_srv_CommandHome_client.cpp
    src/mavros_msgs_srv_CommandHome_server.cpp
    src/mavros_msgs_msg_CommandHomeRequest_publisher.cpp
    src/mavros_msgs_msg_CommandHomeRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandHomeResponse_publisher.cpp
    src/mavros_msgs_msg_CommandHomeResponse_subscriber.cpp
    src/mavros_msgs_CommandHomeRequest_common.cpp
    src/mavros_msgs_CommandHomeResponse_common.cpp
    src/mavros_msgs_CommandInt_request_common.cpp
    src/mavros_msgs_CommandInt_response_common.cpp
    src/mavros_msgs_srv_CommandInt_client.cpp
    src/mavros_msgs_srv_CommandInt_server.cpp
    src/mavros_msgs_msg_CommandIntRequest_publisher.cpp
    src/mavros_msgs_msg_CommandIntRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandIntResponse_publisher.cpp
    src/mavros_msgs_msg_CommandIntResponse_subscriber.cpp
    src/mavros_msgs_CommandIntRequest_common.cpp
    src/mavros_msgs_CommandIntResponse_common.cpp
    src/mavros_msgs_CommandLong_request_common.cpp
    src/mavros_msgs_CommandLong_response_common.cpp
    src/mavros_msgs_srv_CommandLong_client.cpp
    src/mavros_msgs_srv_CommandLong_server.cpp
    src/mavros_msgs_msg_CommandLongRequest_publisher.cpp
    src/mavros_msgs_msg_CommandLongRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandLongResponse_publisher.cpp
    src/mavros_msgs_msg_CommandLongResponse_subscriber.cpp
    src/mavros_msgs_CommandLongRequest_common.cpp
    src/mavros_msgs_CommandLongResponse_common.cpp
    src/mavros_msgs_CommandTOL_request_common.cpp
    src/mavros_msgs_CommandTOL_response_common.cpp
    src/mavros_msgs_srv_CommandTOL_client.cpp
    src/mavros_msgs_srv_CommandTOL_server.cpp
    src/mavros_msgs_msg_CommandTOLRequest_publisher.cpp
    src/mavros_msgs_msg_CommandTOLRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandTOLResponse_publisher.cpp
    src/mavros_msgs_msg_CommandTOLResponse_subscriber.cpp
    src/mavros_msgs_CommandTOLRequest_common.cpp
    src/mavros_msgs_CommandTOLResponse_common.cpp
    src/mavros_msgs_CommandTriggerControl_request_common.cpp
    src/mavros_msgs_CommandTriggerControl_response_common.cpp
    src/mavros_msgs_srv_CommandTriggerControl_client.cpp
    src/mavros_msgs_srv_CommandTriggerControl_server.cpp
    src/mavros_msgs_msg_CommandTriggerControlRequest_publisher.cpp
    src/mavros_msgs_msg_CommandTriggerControlRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandTriggerControlResponse_publisher.cpp
    src/mavros_msgs_msg_CommandTriggerControlResponse_subscriber.cpp
    src/mavros_msgs_CommandTriggerControlRequest_common.cpp
    src/mavros_msgs_CommandTriggerControlResponse_common.cpp
    src/mavros_msgs_CommandTriggerInterval_request_common.cpp
    src/mavros_msgs_CommandTriggerInterval_response_common.cpp
    src/mavros_msgs_srv_CommandTriggerInterval_client.cpp
    src/mavros_msgs_srv_CommandTriggerInterval_server.cpp
    src/mavros_msgs_msg_CommandTriggerIntervalRequest_publisher.cpp
    src/mavros_msgs_msg_CommandTriggerIntervalRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandTriggerIntervalResponse_publisher.cpp
    src/mavros_msgs_msg_CommandTriggerIntervalResponse_subscriber.cpp
    src/mavros_msgs_CommandTriggerIntervalRequest_common.cpp
    src/mavros_msgs_CommandTriggerIntervalResponse_common.cpp
    src/mavros_msgs_CommandVtolTransition_request_common.cpp
    src/mavros_msgs_CommandVtolTransition_response_common.cpp
    src/mavros_msgs_srv_CommandVtolTransition_client.cpp
    src/mavros_msgs_srv_CommandVtolTransition_server.cpp
    src/mavros_msgs_msg_CommandVtolTransitionRequest_publisher.cpp
    src/mavros_msgs_msg_CommandVtolTransitionRequest_subscriber.cpp
    src/mavros_msgs_msg_CommandVtolTransitionResponse_publisher.cpp
    src/mavros_msgs_msg_CommandVtolTransitionResponse_subscriber.cpp
    src/mavros_msgs_CommandVtolTransitionRequest_common.cpp
    src/mavros_msgs_CommandVtolTransitionResponse_common.cpp
    src/mavros_msgs_FileChecksum_request_common.cpp
    src/mavros_msgs_FileChecksum_response_common.cpp
    src/mavros_msgs_srv_FileChecksum_client.cpp
    src/mavros_msgs_srv_FileChecksum_server.cpp
    src/mavros_msgs_msg_FileChecksumRequest_publisher.cpp
    src/mavros_msgs_msg_FileChecksumRequest_subscriber.cpp
    src/mavros_msgs_msg_FileChecksumResponse_publisher.cpp
    src/mavros_msgs_msg_FileChecksumResponse_subscriber.cpp
    src/mavros_msgs_FileChecksumRequest_common.cpp
    src/mavros_msgs_FileChecksumResponse_common.cpp
    src/mavros_msgs_FileClose_request_common.cpp
    src/mavros_msgs_FileClose_response_common.cpp
    src/mavros_msgs_srv_FileClose_client.cpp
    src/mavros_msgs_srv_FileClose_server.cpp
    src/mavros_msgs_msg_FileCloseRequest_publisher.cpp
    src/mavros_msgs_msg_FileCloseRequest_subscriber.cpp
    src/mavros_msgs_msg_FileCloseResponse_publisher.cpp
    src/mavros_msgs_msg_FileCloseResponse_subscriber.cpp
    src/mavros_msgs_FileCloseRequest_common.cpp
    src/mavros_msgs_FileCloseResponse_common.cpp
    src/mavros_msgs_FileList_request_common.cpp
    src/mavros_msgs_FileList_response_common.cpp
    src/mavros_msgs_srv_FileList_client.cpp
    src/mavros_msgs_srv_FileList_server.cpp
    src/mavros_msgs_msg_FileListRequest_publisher.cpp
    src/mavros_msgs_msg_FileListRequest_subscriber.cpp
    src/mavros_msgs_msg_FileListResponse_publisher.cpp
    src/mavros_msgs_msg_FileListResponse_subscriber.cpp
    src/mavros_msgs_FileListRequest_common.cpp
    src/mavros_msgs_FileListResponse_common.cpp
    src/mavros_msgs_FileMakeDir_request_common.cpp
    src/mavros_msgs_FileMakeDir_response_common.cpp
    src/mavros_msgs_srv_FileMakeDir_client.cpp
    src/mavros_msgs_srv_FileMakeDir_server.cpp
    src/mavros_msgs_msg_FileMakeDirRequest_publisher.cpp
    src/mavros_msgs_msg_FileMakeDirRequest_subscriber.cpp
    src/mavros_msgs_msg_FileMakeDirResponse_publisher.cpp
    src/mavros_msgs_msg_FileMakeDirResponse_subscriber.cpp
    src/mavros_msgs_FileMakeDirRequest_common.cpp
    src/mavros_msgs_FileMakeDirResponse_common.cpp
    src/mavros_msgs_FileOpen_request_common.cpp
    src/mavros_msgs_FileOpen_response_common.cpp
    src/mavros_msgs_srv_FileOpen_client.cpp
    src/mavros_msgs_srv_FileOpen_server.cpp
    src/mavros_msgs_msg_FileOpenRequest_publisher.cpp
    src/mavros_msgs_msg_FileOpenRequest_subscriber.cpp
    src/mavros_msgs_msg_FileOpenResponse_publisher.cpp
    src/mavros_msgs_msg_FileOpenResponse_subscriber.cpp
    src/mavros_msgs_FileOpenRequest_common.cpp
    src/mavros_msgs_FileOpenResponse_common.cpp
    src/mavros_msgs_FileRead_request_common.cpp
    src/mavros_msgs_FileRead_response_common.cpp
    src/mavros_msgs_srv_FileRead_client.cpp
    src/mavros_msgs_srv_FileRead_server.cpp
    src/mavros_msgs_msg_FileReadRequest_publisher.cpp
    src/mavros_msgs_msg_FileReadRequest_subscriber.cpp
    src/mavros_msgs_msg_FileReadResponse_publisher.cpp
    src/mavros_msgs_msg_FileReadResponse_subscriber.cpp
    src/mavros_msgs_FileReadRequest_common.cpp
    src/mavros_msgs_FileReadResponse_common.cpp
    src/mavros_msgs_FileRemove_request_common.cpp
    src/mavros_msgs_FileRemove_response_common.cpp
    src/mavros_msgs_srv_FileRemove_client.cpp
    src/mavros_msgs_srv_FileRemove_server.cpp
    src/mavros_msgs_msg_FileRemoveRequest_publisher.cpp
    src/mavros_msgs_msg_FileRemoveRequest_subscriber.cpp
    src/mavros_msgs_msg_FileRemoveResponse_publisher.cpp
    src/mavros_msgs_msg_FileRemoveResponse_subscriber.cpp
    src/mavros_msgs_FileRemoveRequest_common.cpp
    src/mavros_msgs_FileRemoveResponse_common.cpp
    src/mavros_msgs_FileRemoveDir_request_common.cpp
    src/mavros_msgs_FileRemoveDir_response_common.cpp
    src/mavros_msgs_srv_FileRemoveDir_client.cpp
    src/mavros_msgs_srv_FileRemoveDir_server.cpp
    src/mavros_msgs_msg_FileRemoveDirRequest_publisher.cpp
    src/mavros_msgs_msg_FileRemoveDirRequest_subscriber.cpp
    src/mavros_msgs_msg_FileRemoveDirResponse_publisher.cpp
    src/mavros_msgs_msg_FileRemoveDirResponse_subscriber.cpp
    src/mavros_msgs_FileRemoveDirRequest_common.cpp
    src/mavros_msgs_FileRemoveDirResponse_common.cpp
    src/mavros_msgs_FileRename_request_common.cpp
    src/mavros_msgs_FileRename_response_common.cpp
    src/mavros_msgs_srv_FileRename_client.cpp
    src/mavros_msgs_srv_FileRename_server.cpp
    src/mavros_msgs_msg_FileRenameRequest_publisher.cpp
    src/mavros_msgs_msg_FileRenameRequest_subscriber.cpp
    src/mavros_msgs_msg_FileRenameResponse_publisher.cpp
    src/mavros_msgs_msg_FileRenameResponse_subscriber.cpp
    src/mavros_msgs_FileRenameRequest_common.cpp
    src/mavros_msgs_FileRenameResponse_common.cpp
    src/mavros_msgs_FileTruncate_request_common.cpp
    src/mavros_msgs_FileTruncate_response_common.cpp
    src/mavros_msgs_srv_FileTruncate_client.cpp
    src/mavros_msgs_srv_FileTruncate_server.cpp
    src/mavros_msgs_msg_FileTruncateRequest_publisher.cpp
    src/mavros_msgs_msg_FileTruncateRequest_subscriber.cpp
    src/mavros_msgs_msg_FileTruncateResponse_publisher.cpp
    src/mavros_msgs_msg_FileTruncateResponse_subscriber.cpp
    src/mavros_msgs_FileTruncateRequest_common.cpp
    src/mavros_msgs_FileTruncateResponse_common.cpp
    src/mavros_msgs_FileWrite_request_common.cpp
    src/mavros_msgs_FileWrite_response_common.cpp
    src/mavros_msgs_srv_FileWrite_client.cpp
    src/mavros_msgs_srv_FileWrite_server.cpp
    src/mavros_msgs_msg_FileWriteRequest_publisher.cpp
    src/mavros_msgs_msg_FileWriteRequest_subscriber.cpp
    src/mavros_msgs_msg_FileWriteResponse_publisher.cpp
    src/mavros_msgs_msg_FileWriteResponse_subscriber.cpp
    src/mavros_msgs_FileWriteRequest_common.cpp
    src/mavros_msgs_FileWriteResponse_common.cpp
    src/mavros_msgs_LogRequestData_request_common.cpp
    src/mavros_msgs_LogRequestData_response_common.cpp
    src/mavros_msgs_srv_LogRequestData_client.cpp
    src/mavros_msgs_srv_LogRequestData_server.cpp
    src/mavros_msgs_msg_LogRequestDataRequest_publisher.cpp
    src/mavros_msgs_msg_LogRequestDataRequest_subscriber.cpp
    src/mavros_msgs_msg_LogRequestDataResponse_publisher.cpp
    src/mavros_msgs_msg_LogRequestDataResponse_subscriber.cpp
    src/mavros_msgs_LogRequestDataRequest_common.cpp
    src/mavros_msgs_LogRequestDataResponse_common.cpp
    src/mavros_msgs_LogRequestEnd_request_common.cpp
    src/mavros_msgs_LogRequestEnd_response_common.cpp
    src/mavros_msgs_srv_LogRequestEnd_client.cpp
    src/mavros_msgs_srv_LogRequestEnd_server.cpp
    src/mavros_msgs_msg_LogRequestEndRequest_publisher.cpp
    src/mavros_msgs_msg_LogRequestEndRequest_subscriber.cpp
    src/mavros_msgs_msg_LogRequestEndResponse_publisher.cpp
    src/mavros_msgs_msg_LogRequestEndResponse_subscriber.cpp
    src/mavros_msgs_LogRequestEndRequest_common.cpp
    src/mavros_msgs_LogRequestEndResponse_common.cpp
    src/mavros_msgs_LogRequestList_request_common.cpp
    src/mavros_msgs_LogRequestList_response_common.cpp
    src/mavros_msgs_srv_LogRequestList_client.cpp
    src/mavros_msgs_srv_LogRequestList_server.cpp
    src/mavros_msgs_msg_LogRequestListRequest_publisher.cpp
    src/mavros_msgs_msg_LogRequestListRequest_subscriber.cpp
    src/mavros_msgs_msg_LogRequestListResponse_publisher.cpp
    src/mavros_msgs_msg_LogRequestListResponse_subscriber.cpp
    src/mavros_msgs_LogRequestListRequest_common.cpp
    src/mavros_msgs_LogRequestListResponse_common.cpp
    src/mavros_msgs_MessageInterval_request_common.cpp
    src/mavros_msgs_MessageInterval_response_common.cpp
    src/mavros_msgs_srv_MessageInterval_client.cpp
    src/mavros_msgs_srv_MessageInterval_server.cpp
    src/mavros_msgs_msg_MessageIntervalRequest_publisher.cpp
    src/mavros_msgs_msg_MessageIntervalRequest_subscriber.cpp
    src/mavros_msgs_msg_MessageIntervalResponse_publisher.cpp
    src/mavros_msgs_msg_MessageIntervalResponse_subscriber.cpp
    src/mavros_msgs_MessageIntervalRequest_common.cpp
    src/mavros_msgs_MessageIntervalResponse_common.cpp
    src/mavros_msgs_MountConfigure_request_common.cpp
    src/mavros_msgs_MountConfigure_response_common.cpp
    src/mavros_msgs_srv_MountConfigure_client.cpp
    src/mavros_msgs_srv_MountConfigure_server.cpp
    src/mavros_msgs_msg_MountConfigureRequest_publisher.cpp
    src/mavros_msgs_msg_MountConfigureRequest_subscriber.cpp
    src/mavros_msgs_msg_MountConfigureResponse_publisher.cpp
    src/mavros_msgs_msg_MountConfigureResponse_subscriber.cpp
    src/mavros_msgs_MountConfigureRequest_common.cpp
    src/mavros_msgs_MountConfigureResponse_common.cpp
    src/mavros_msgs_ParamGet_request_common.cpp
    src/mavros_msgs_ParamGet_response_common.cpp
    src/mavros_msgs_srv_ParamGet_client.cpp
    src/mavros_msgs_srv_ParamGet_server.cpp
    src/mavros_msgs_msg_ParamGetRequest_publisher.cpp
    src/mavros_msgs_msg_ParamGetRequest_subscriber.cpp
    src/mavros_msgs_msg_ParamGetResponse_publisher.cpp
    src/mavros_msgs_msg_ParamGetResponse_subscriber.cpp
    src/mavros_msgs_ParamGetRequest_common.cpp
    src/mavros_msgs_ParamGetResponse_common.cpp
    src/mavros_msgs_ParamPull_request_common.cpp
    src/mavros_msgs_ParamPull_response_common.cpp
    src/mavros_msgs_srv_ParamPull_client.cpp
    src/mavros_msgs_srv_ParamPull_server.cpp
    src/mavros_msgs_msg_ParamPullRequest_publisher.cpp
    src/mavros_msgs_msg_ParamPullRequest_subscriber.cpp
    src/mavros_msgs_msg_ParamPullResponse_publisher.cpp
    src/mavros_msgs_msg_ParamPullResponse_subscriber.cpp
    src/mavros_msgs_ParamPullRequest_common.cpp
    src/mavros_msgs_ParamPullResponse_common.cpp
    src/mavros_msgs_ParamPush_request_common.cpp
    src/mavros_msgs_ParamPush_response_common.cpp
    src/mavros_msgs_srv_ParamPush_client.cpp
    src/mavros_msgs_srv_ParamPush_server.cpp
    src/mavros_msgs_msg_ParamPushRequest_publisher.cpp
    src/mavros_msgs_msg_ParamPushRequest_subscriber.cpp
    src/mavros_msgs_msg_ParamPushResponse_publisher.cpp
    src/mavros_msgs_msg_ParamPushResponse_subscriber.cpp
    src/mavros_msgs_ParamPushRequest_common.cpp
    src/mavros_msgs_ParamPushResponse_common.cpp
    src/mavros_msgs_ParamSet_request_common.cpp
    src/mavros_msgs_ParamSet_response_common.cpp
    src/mavros_msgs_srv_ParamSet_client.cpp
    src/mavros_msgs_srv_ParamSet_server.cpp
    src/mavros_msgs_msg_ParamSetRequest_publisher.cpp
    src/mavros_msgs_msg_ParamSetRequest_subscriber.cpp
    src/mavros_msgs_msg_ParamSetResponse_publisher.cpp
    src/mavros_msgs_msg_ParamSetResponse_subscriber.cpp
    src/mavros_msgs_ParamSetRequest_common.cpp
    src/mavros_msgs_ParamSetResponse_common.cpp
    src/mavros_msgs_SetMavFrame_request_common.cpp
    src/mavros_msgs_SetMavFrame_response_common.cpp
    src/mavros_msgs_srv_SetMavFrame_client.cpp
    src/mavros_msgs_srv_SetMavFrame_server.cpp
    src/mavros_msgs_msg_SetMavFrameRequest_publisher.cpp
    src/mavros_msgs_msg_SetMavFrameRequest_subscriber.cpp
    src/mavros_msgs_msg_SetMavFrameResponse_publisher.cpp
    src/mavros_msgs_msg_SetMavFrameResponse_subscriber.cpp
    src/mavros_msgs_SetMavFrameRequest_common.cpp
    src/mavros_msgs_SetMavFrameResponse_common.cpp
    src/mavros_msgs_SetMode_request_common.cpp
    src/mavros_msgs_SetMode_response_common.cpp
    src/mavros_msgs_srv_SetMode_client.cpp
    src/mavros_msgs_srv_SetMode_server.cpp
    src/mavros_msgs_msg_SetModeRequest_publisher.cpp
    src/mavros_msgs_msg_SetModeRequest_subscriber.cpp
    src/mavros_msgs_msg_SetModeResponse_publisher.cpp
    src/mavros_msgs_msg_SetModeResponse_subscriber.cpp
    src/mavros_msgs_SetModeRequest_common.cpp
    src/mavros_msgs_SetModeResponse_common.cpp
    src/mavros_msgs_StreamRate_request_common.cpp
    src/mavros_msgs_StreamRate_response_common.cpp
    src/mavros_msgs_srv_StreamRate_client.cpp
    src/mavros_msgs_srv_StreamRate_server.cpp
    src/mavros_msgs_msg_StreamRateRequest_publisher.cpp
    src/mavros_msgs_msg_StreamRateRequest_subscriber.cpp
    src/mavros_msgs_msg_StreamRateResponse_publisher.cpp
    src/mavros_msgs_msg_StreamRateResponse_subscriber.cpp
    src/mavros_msgs_StreamRateRequest_common.cpp
    src/mavros_msgs_StreamRateResponse_common.cpp
    src/mavros_msgs_VehicleInfoGet_request_common.cpp
    src/mavros_msgs_VehicleInfoGet_response_common.cpp
    src/mavros_msgs_srv_VehicleInfoGet_client.cpp
    src/mavros_msgs_srv_VehicleInfoGet_server.cpp
    src/mavros_msgs_msg_VehicleInfoGetRequest_publisher.cpp
    src/mavros_msgs_msg_VehicleInfoGetRequest_subscriber.cpp
    src/mavros_msgs_msg_VehicleInfoGetResponse_publisher.cpp
    src/mavros_msgs_msg_VehicleInfoGetResponse_subscriber.cpp
    src/mavros_msgs_VehicleInfoGetRequest_common.cpp
    src/mavros_msgs_VehicleInfoGetResponse_common.cpp
    src/mavros_msgs_WaypointClear_request_common.cpp
    src/mavros_msgs_WaypointClear_response_common.cpp
    src/mavros_msgs_srv_WaypointClear_client.cpp
    src/mavros_msgs_srv_WaypointClear_server.cpp
    src/mavros_msgs_msg_WaypointClearRequest_publisher.cpp
    src/mavros_msgs_msg_WaypointClearRequest_subscriber.cpp
    src/mavros_msgs_msg_WaypointClearResponse_publisher.cpp
    src/mavros_msgs_msg_WaypointClearResponse_subscriber.cpp
    src/mavros_msgs_WaypointClearRequest_common.cpp
    src/mavros_msgs_WaypointClearResponse_common.cpp
    src/mavros_msgs_WaypointPull_request_common.cpp
    src/mavros_msgs_WaypointPull_response_common.cpp
    src/mavros_msgs_srv_WaypointPull_client.cpp
    src/mavros_msgs_srv_WaypointPull_server.cpp
    src/mavros_msgs_msg_WaypointPullRequest_publisher.cpp
    src/mavros_msgs_msg_WaypointPullRequest_subscriber.cpp
    src/mavros_msgs_msg_WaypointPullResponse_publisher.cpp
    src/mavros_msgs_msg_WaypointPullResponse_subscriber.cpp
    src/mavros_msgs_WaypointPullRequest_common.cpp
    src/mavros_msgs_WaypointPullResponse_common.cpp
    src/mavros_msgs_WaypointPush_request_common.cpp
    src/mavros_msgs_WaypointPush_response_common.cpp
    src/mavros_msgs_srv_WaypointPush_client.cpp
    src/mavros_msgs_srv_WaypointPush_server.cpp
    src/mavros_msgs_msg_WaypointPushRequest_publisher.cpp
    src/mavros_msgs_msg_WaypointPushRequest_subscriber.cpp
    src/mavros_msgs_msg_WaypointPushResponse_publisher.cpp
    src/mavros_msgs_msg_WaypointPushResponse_subscriber.cpp
    src/mavros_msgs_WaypointPushRequest_common.cpp
    src/mavros_msgs_WaypointPushResponse_common.cpp
    src/mavros_msgs_WaypointSetCurrent_request_common.cpp
    src/mavros_msgs_WaypointSetCurrent_response_common.cpp
    src/mavros_msgs_srv_WaypointSetCurrent_client.cpp
    src/mavros_msgs_srv_WaypointSetCurrent_server.cpp
    src/mavros_msgs_msg_WaypointSetCurrentRequest_publisher.cpp
    src/mavros_msgs_msg_WaypointSetCurrentRequest_subscriber.cpp
    src/mavros_msgs_msg_WaypointSetCurrentResponse_publisher.cpp
    src/mavros_msgs_msg_WaypointSetCurrentResponse_subscriber.cpp
    src/mavros_msgs_WaypointSetCurrentRequest_common.cpp
    src/mavros_msgs_WaypointSetCurrentResponse_common.cpp
)
target_include_directories(mavros_msgs_matlab PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries( mavros_msgs_matlab
	"/usr/local/MATLAB/R2020b/extern/bin/glnxa64/libMatlabDataArray.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/console_bridge/lib/libconsole_bridge.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib/libclass_loader.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib/librosconsole.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib/libroscpp.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib/libroscpp_serialization.so"
	"/usr/local/MATLAB/R2020b/sys/ros1/glnxa64/ros1/lib/librostime.so"
	${Boost_LIBRARIES}
	${CMAKE_DL_LIBS}
	)
## Add cmake target dependencies of the executable/library
## as an example, message headers may need to be generated before nodes
add_dependencies(
  mavros_msgs_matlab
  ${${PROJECT_NAME}_EXPORTED_TARGETS}
  ${catkin_EXPORTED_TARGETS}
)
# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(mavros_msgs_matlab PRIVATE "MAVROS_MSGS_BUILDING_LIBRARY")
install(
  DIRECTORY include/
  DESTINATION include
)
install(
  TARGETS mavros_msgs_matlab
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install (DIRECTORY m/ DESTINATION m/ FILES_MATCHING PATTERN "*.m")
# Generated 25-May-2021 02:57:57
# Copyright 2019-2020 The MathWorks, Inc.
